2002-12-03 Axel Simon <A.Simon@ukc.ac.uk>

	* config.guess, config.sub: updated from GNU website

2002-12-01 Axel Simon <A.Simon@ukc.ac.uk>

	* demo/graphic/Drawing.hs demo/hello/World.hs
	demo/treeList/ListTest.hs demo/unicode/Arabic.hs
	gtk/general/General.chs gtk/treeList/ListStore.chs
	mogul/WidgetTable.hs: Changed the initialization and the main loop
	function again.
	
2002-11-08 Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/menuComboToolbar/Menu.chs gtk/treeList/ListStore.chs
	gtk/treeList/TreeModel.chs: Documentation changes.

2002-11-11 Axel Simon <A.Simon@ukc.ac.uk> 

	* gtk/general/General.chs: Changed the initialization and main
	loop functions. They now have names which do not clash with the
	Prelude.

	* Makefile: Include the two demos "graphics" and "treeList".

	* demo/graphic/Drawing.hs demo/hello/World.hs
	demo/treeList/ListTest.hs demo/unicode/Arabic.hs: Reflect the
	change to the main loop functions.
	
2002-11-08 Axel Simon <A.Simon@ukc.ac.uk> 

	* gendoc/Abstract.hs gendoc/Driver.hs gendoc/Lexer.hs
	gendoc/Parser.hs gendoc/State.hs gendoc/Update.hs
	gendoc/XMLwrite.hs gtk/abstract/Box.chs gtk/abstract/Range.chs
	gtk/abstract/Widget.chs gtk/buttons/Button.chs
	gtk/display/Label.chs gtk/entry/Entry.chs gtk/gdk/Drawable.chs
	gtk/gdk/Events.hsc gtk/gdk/GC.chs gtk/general/General.chs
	gtk/general/Gtk.hs gtk/general/IconFactory.chs
	gtk/general/Structs.hsc gtk/layout/Layout.chs
	gtk/menuComboToolbar/CheckMenuItem.chs
	gtk/menuComboToolbar/ImageMenuItem.chs
	gtk/menuComboToolbar/Toolbar.chs gtk/misc/DrawingArea.chs
	gtk/misc/HandleBox.chs gtk/misc/Viewport.chs
	gtk/multiline/TextBuffer.chs gtk/multiline/TextIter.chs
	gtk/multiline/TextView.chs gtk/pango/Markup.hs
	gtk/scrolling/ScrolledWindow.chs gtk/windows/Window.chs: More
	documentation fixes.

	* gtk/signals/gtkmarshal.list gtk/treeList/CellRenderer.hs
	gtk/treeList/CellRendererPixbuf.chs
	gtk/treeList/CellRendererText.chs
	gtk/treeList/CellRendererToggle.chs gtk/treeList/TreeModel.chs